<resources>
    <string name="app_name">Authorization</string>
    <string name="log_in">ВОЙТИ</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">У вас ещё нет аккаунта? Создать</string>
    <string name="login_error">Неправильный email или пароль</string>
    <string name="username">Username</string>
    <string name="name">Имя</string>ф
    <string name="second_name">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="sign_in_button">Зарегистрироваться</string>
    <string name="exit">выход</string>
    <string name="online_error">Отсутствует подключение к интернету</string>
    <string name="bookButton">Заказать</string>
    <string name="best_price">Лучшая цена</string>
    <string name="in_travel">В пути</string>
    <string name="destination">Прилет</string>
    <string name="departure">Вылет</string>
    <string name="company">Перевозчик</string>
</resources>
